# amanuo

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 004_add_schema_templates.py  006_add_analytics_materialized_views.py  095842ce1f0b_initial_schema.py
docs/: advanced-patterns.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
frontend/: .cta.json  Dockerfile  components.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
samples/schemas/: id-card-generic.json  invoice-generic.json  vehicle-license-vn.json
src/: config.py  database.py  main.py
src/data/: curated-templates.yaml
src/engine/: __init__.py  pipeline-config.py  pipeline-executor.py  step-interface.py  step-registry.py
src/middleware/: auth-middleware.py
src/models/: accuracy-metric.py  analytics-models.py  api-models.py  approval-policy.py  base.py  batch.py  extraction-review.py  job.py  pipeline.py  review-assignment.py  review-audit-log.py  review-round.py  role-assignment.py  schema-orm.py  schema-template.py  webhook.py  workspace.py
src/pipelines/: __init__.py  base-provider.py
src/routers/: accuracy.py  analytics.py  approval-policies.py  auth.py  batch.py  extract.py  health.py  jobs.py  pipelines.py  review-workflow.py  reviews.py  schemas.py  templates.py  users.py  webhooks.py  websocket-events.py  workspaces.py
src/schemas/: __init__.py  (+7 more)
tests/: conftest.py
(+127 files in other folders)
