[project]
name = "amanuo"
version = "0.1.0"
description = "Adaptive hybrid OCR system with local/cloud pipelines for structured document extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "gradio>=6.9.0",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "redis>=5.3.1",
    "fakeredis>=2.34.1",
    "broadcaster[redis]>=0.3.1",
]

[project.optional-dependencies]
cloud = [
    "google-genai>=1.0.0",
    "mistralai>=1.0.0",
]
local = [
    "paddleocr>=2.9.0",
    "paddlepaddle>=2.6.0",
]
ui = [
    "gradio>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Requires external services",
    "e2e: End-to-end flow tests",
]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test-*.py", "test_*.py"]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.6",
]
